<resources>
    <string name="app_name">Simple Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note_button_descr">Add note button</string>
    <string name="button_add">Add</string>
    <string name="what_to_use">What to use:</string>
    <string name="btn_room">ROOM</string>
    <string name="btn_firebase">FIREBASE</string>
    <string name="menu_exit_txt">Exit</string>
    <string name="menu_delete_txt">Delete</string>
    <string name="toast_enter_name">Input note name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="Input_blank_toast">Input email and password</string>
</resources>